--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "team-reflex/discord-php": "^7.0",
         "simplito/elliptic-php": "^1.0",
-        "discord-php/slash": "^1.0"
+        "discord-php/slash": "^1.0",
+      "ext-simplexml": "*"
     }
 }
